--- a/lib/faf_cn_web/live/eco_guides_live.html.heex
+++ b/lib/faf_cn_web/live/eco_guides_live.html.heex
@@ -1,4 +1,4 @@
-<Layouts.app flash={@flash}>
+<Layouts.app flash={@flash} current_user={@current_user}>
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
     <%!-- Header --%>
     <div class="mb-6">
