implementing unit editing

--- a/lib/faf_cn_web/live/eco_guides_live.html.heex
+++ b/lib/faf_cn_web/live/eco_guides_live.html.heex
@@ -22,6 +22,8 @@
           selected_faction={@selected_faction}
           selected_units={@selected_units}
           base_unit={@base_unit}
+          filters={@filters}
+          active_filters={@active_filters}
         />
       </div>
 
