--- a/lib/faf_cn_web/live/eco_guides_live.html.heex
+++ b/lib/faf_cn_web/live/eco_guides_live.html.heex
@@ -29,7 +29,7 @@
 
       <%!-- Right Column: Eco Comparison (4 columns) --%>
       <div class="lg:col-span-4 space-y-4">
-        <.eco_comparison base_unit={@base_unit} selected_units={@selected_units} />
+        <.eco_comparison base_unit={@base_unit} selected_units={@selected_units} current_user={@current_user} />
       </div>
     </div>
   </div>
